+ Добавлен идентификатор сети IFeatureNetworkId * Инициализация JS API Vkontakte перенесена из html на сторону flash

--- a/as3snapi-sandbox/html-template/iframe_mm.html
+++ b/as3snapi-sandbox/html-template/iframe_mm.html
@@ -17,7 +17,7 @@
     function initFlash() {
         var flashVars = location.search.replace(/^\?/, '');
         var flashId = 'flash-app';
-        var data = 'sandbox.swf';
+        var data = 'as3snapi-sandbox.swf';
 
         var attr = {name:flashId, data:data, width:760, height:660};
         var param = {
