--- a/as3snapi-sandbox/html-template/iframe_vk.html
+++ b/as3snapi-sandbox/html-template/iframe_vk.html
@@ -11,15 +11,13 @@
 <body>
 <script type="text/javascript">
     $(document).ready(function () {
-        VK.init(function () {
-            initFlash();
-        });
+        initFlash();
     });
 
     function initFlash() {
         var flashVars = location.search.replace(/^\?/, '');
         var flashId = 'flash-app';
-        var data = 'sandbox.swf';
+        var data = 'as3snapi-sandbox.swf';
 
         var attr = {name:flashId, data:data, width:760, height:660};
         var param = {
